--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,18 @@
       <version>2.0.0-alpha0</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>5.0.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
